--- a/services.html
+++ b/services.html
@@ -40,8 +40,10 @@
 
         <div class="social">
            <a href="contact.html"><i class="fab fa-whatsapp"></i></a>
-           <a href="https://www.instagram.com/ambikesh.15/"><i class="fab fa-instagram"></i></a>
-           <a href="https://www.linkedin.com/in/ambikesh-srivastava-540072225?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2BM8sI4KLSLeDPz%2BUFxhyKA%3D%3D"><i class="fab fa-linkedin"></i></a>
+           
+           <a href="https://www.linkedin.com/in/ambikesh-srivastava-2416992a0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BfLoVG234RrWBMqg9o1WZTQ%3D%3D    
+        " ><i class="fab fa-linkedin"></i
+        ></a>
         </div>
     </div>
 </body>
