--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
       <div class="social">
         <a href="contact.html"><i class="fab fa-whatsapp"></i></a>
         
-        <a
-          href="www.linkedin.com/in/ambikesh-srivastava-2416992a0"
-          ><i class="fab fa-linkedin"></i
+        <a href="https://www.linkedin.com/in/ambikesh-srivastava-2416992a0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BfLoVG234RrWBMqg9o1WZTQ%3D%3D    
+        " ><i class="fab fa-linkedin"></i
         ></a>
       </div>
     </div>
