--- a/portfolio.html
+++ b/portfolio.html
@@ -39,8 +39,10 @@
 
         <div class="social">
            <a href="contact.html"><i class="fab fa-whatsapp"></i></a>
-           <a href="https://www.instagram.com/ambikesh.15/"><i class="fab fa-instagram"></i></a>
-           <a href=""><i class="fab fa-linkedin"></i></a>
+          
+           <a href="https://www.linkedin.com/in/ambikesh-srivastava-2416992a0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BfLoVG234RrWBMqg9o1WZTQ%3D%3D    
+        " ><i class="fab fa-linkedin"></i
+        ></a>
         </div>
     </div>
 </body>
